<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="myDay"
            type="com.dong.edu.data.Day" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_day"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_layout_height">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_collapseMode="pin" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/spinner"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:hint="@string/hint_day_description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_day_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@={myDay.description}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/photo_of_today" />


                <ImageView
                    android:id="@+id/image_to_upload"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:background="@color/design_default_color_secondary_variant"
                    android:contentDescription="@string/photo_of_today"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_select_photo"
                        android:layout_width="@dimen/textview_width"
                        android:layout_height="@dimen/textview_height"
                        android:layout_margin="16dp"
                        android:onClick="selectPicture"
                        android:text="@string/select_a_photo" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_take_photo"
                        android:layout_width="@dimen/textview_width"
                        android:layout_height="@dimen/textview_height"
                        android:layout_margin="16dp"
                        android:onClick="takePicture"
                        android:text="@string/take_a_photo" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="@dimen/textview_width"
                    android:layout_height="@dimen/textview_height"
                    android:layout_marginStart="16dp"
                    android:onClick="saveDayToCloud"
                    android:text="@string/save" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>

