<?xml version="1.0" encoding="utf-8"?>


<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        >

        <TextView
            android:id="@+id/sprint_name_viewholder"
            android:layout_width="@dimen/textview_width"
            android:layout_height="@dimen/textview_height"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/sprint_name_viewholder2"
            app:layout_constraintTop_toBottomOf="@+id/sprint_name_viewholder2"
            tools:text="write good text" />

        <TextView
            android:id="@+id/sprint_name_viewholder2"
            android:layout_width="@dimen/textview_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sprint_description_viewholder"
            android:layout_width="231dp"
            android:layout_height="@dimen/textview_height"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sprint_name_viewholder"
            tools:text="the first day of a 14 day sprint" />

        <TextView
            android:id="@+id/sprint_description_viewholder2"
            android:layout_width="@dimen/textview_width"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/sprint_description_viewholder"
            app:layout_constraintTop_toTopOf="@+id/sprint_name_viewholder2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="38dp"
            android:layout_height="@dimen/textview_height"
            android:layout_marginTop="8dp"
            android:text="@string/from"
            app:layout_constraintStart_toStartOf="@+id/sprint_name_viewholder"
            app:layout_constraintTop_toBottomOf="@+id/sprint_name_viewholder" />

        <TextView
            android:id="@+id/sprint_start_date_viewholder"
            android:layout_width="@dimen/textview_width"
            android:layout_height="@dimen/textview_height"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            tools:text="Start: 02/12/2020" />

        <TextView
            android:id="@+id/sprint_end_date_viewholder"
            android:layout_width="@dimen/textview_width"
            android:layout_height="@dimen/textview_height"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sprint_start_date_viewholder"
            tools:text="End: 02/12/2020" />

        <TextView
            android:id="@+id/sprint_end_date_viewholder2"
            android:layout_width="38dp"
            android:layout_height="@dimen/textview_height"
            android:layout_marginEnd="16dp"
            android:text="@string/end"
            app:layout_constraintEnd_toStartOf="@+id/sprint_end_date_viewholder"
            app:layout_constraintTop_toTopOf="@+id/sprint_start_date_viewholder" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
